fix: display of PopUp fixed on mobile view

--- a/Frontend/src/components/HomeComponents.css
+++ b/Frontend/src/components/HomeComponents.css
@@ -14,14 +14,14 @@
   }
 }
 #mobile {
-  display: none !important;
+  /* display: none !important; */
 }
 @media (max-width: 768px) {
   #pc {
     display: none;
   }
   #mobile {
-    display: block !important;
+    /* display: block !important; */
     position: fixed;
     height: 100vh;
     width: 100vw;
